slurm_output/old/slurm-48433023.out
compute-e-16-237.o2.rc.hms.harvard.edu
  File "multithreading.py", line 55
    queue.put(output)
        ^
SyntaxError: invalid syntax
